<resources>
    <string name="app_name">SSHD For Android</string>

	<string name="action_settings">Settings</string>

	<string name="title">信息</string>
	<string name="wifi">WIFI信息:</string>
	<string name="addr">地址信息:</string>
	<string name="state">运行状态:</string>
	<string name="log">日志</string>

	<string name="clear">清除日志</string>
	<string name="login_out">退出应用</string>

	<string name="system">系统</string>
	<string name="auto_start">自动启动服务</string>
	<string name="auto_start_info">当启动应用时，自动启动服务</string>
	<string name="start_on_boot">开机自动启动</string>
	<string name="start_on_boot_info">开机自动启动应用程序</string>
	<string name="keep_screen_on">屏幕常亮</string>
	<string name="keep_screen_on_info">允许应用程序运行时，保持屏幕激活</string>

	<string name="sshd_config">SSH服务配置</string>
	<string name="sshd_port">服务端口</string>
	<string name="sshd_passw">默认密码</string>
</resources>
