<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include layout="@layout/com_title" />

    <LinearLayout
        android:id="@+id/lay_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <LinearLayout
            android:id="@+id/lay_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/wifi"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/tv_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/line_size"
                android:text="WIFI2403"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_addr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/addr"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/tv_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/line_size"
                android:text="-"
                android:textColor="@color/darkred"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_state"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/state"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/line_size"
                android:text="-"
                android:textColor="@color/darkred"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/log"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_touch_help" />

        <ImageButton
            android:id="@+id/btn_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_touch_off" />

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_touch_option" />
    </RelativeLayout>

</LinearLayout>