<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include layout="@layout/com_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/system"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue"
            android:gravity="left" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_auto_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/start_on_boot"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_auto_start"
                android:layout_marginLeft="30dip"
                android:gravity="left"
                android:text="@string/start_on_boot_info"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/info_size" />

            <ImageButton
                android:id="@+id/btn_auto_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dip"
                android:background="@null"
                android:src="@drawable/no" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_start_on_boot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/start_on_boot"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_start_on_boot"
                android:layout_marginLeft="30dip"
                android:text="@string/start_on_boot_info"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/info_size" />

            <ImageButton
                android:id="@+id/btn_start_on_boot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dip"
                android:background="@null"
                android:src="@drawable/no" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_keep_screen_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/keep_screen_on"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_keep_screen_on"
                android:layout_marginLeft="30dip"
                android:text="@string/keep_screen_on_info"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/info_size" />

            <ImageButton
                android:id="@+id/btn_keep_screen_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="35dip"
                android:background="@null"
                android:src="@drawable/no" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/sshd_config"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sshd_port_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/sshd_port"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/tv_sshd_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_sshd_port_lable"
                android:layout_centerHorizontal="true"
                android:text="22022"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/info_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_sshd_passw_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/sshd_passw"
                android:textColor="@color/simpleblue"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/tv_sshd_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_sshd_passw_label"
                android:layout_centerHorizontal="true"
                android:text="password"
                android:textColor="@color/lightgreen"
                android:textSize="@dimen/info_size" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/darkslateblue" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_touch_help" />

        <ImageButton
            android:id="@+id/btn_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_touch_off"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_touch_option" />
    </RelativeLayout>

</LinearLayout>